--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-test-renderer": "^16.13.1",
     "@types/redux-form": "^8.3.0",
     "@types/uuid": "^8.3.0",
     "axios": "^0.20.0",
@@ -19,6 +20,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "react-test-renderer": "16.13.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
