--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-test-renderer": "^17.0.0",
     "@types/redux-form": "^8.3.0",
     "@types/uuid": "^8.3.0",
+    "antd": "^4.15.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
